Fixed main overflow being hidden

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -36,6 +36,7 @@ body
 main
 	box-sizing: content-box
 	overflow-y: scroll
+	min-height: 100vh
 	width: 100%
 	height: 100%
 	padding-right: 16px
